--- a/src/style.css
+++ b/src/style.css
@@ -54,12 +54,13 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
-  --color-text: #2e353f;
+  --color-primary: white;
+  --color-text: #1763cc;
   --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
+  --color-heading: white;
+  --color-heading-black: white;
   --color-accent: #d1dce5;
+ 
 }
 
 /* HTML elements */
@@ -75,6 +76,7 @@ html {
   font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 body {
@@ -244,6 +246,7 @@ a:focus {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
   padding: var(--spacing-10) var(--spacing-5);
+  background-color: black;
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
